--- a/Index.html
+++ b/Index.html
@@ -6,11 +6,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/d550f06ca5.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/index.css">
     <title>Portfolio</title>
 </head>
 <body>
-    <nav class="list">
-        <a href="#home" class="logo"><img src="" alt="logo"></a>
-    </nav>
+    
+        <!-- nav bar -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class=" container">
+                <!-- logo and brand -->
+            <a class="navbar-brand" href="#"> <img src="/imgs/logo.png" alt=""> Portfolio</a>
+            <!-- responsive button -->
+            <button class=" navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <!--nav list items -->
+            <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo01">
+                <ul class="navbar-nav justify-content-end">
+                <li class="nav-item">
+                    <a class="nav-link " href="#about">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#resume">Resume</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#portfolio">Portfolio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link " href="#blog">Blog</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link " href="#contact">Contact</a>
+                </li>
+                </ul>
+            </div>
+            </div>
+        </nav>
+    <section class="home container align-items-center">
+        <h1>Dimuthu Lakshan</h1>
+        <h2>I am a Web Developer</h2>
+        <div>
+            <ul>
+                <li><a href="#twitter"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="#facebook"><i class="fab fa-facebook-square"></i></a></li>
+                <li><a href="#linkedin"><i class="fab fa-linkedin"></i></a></li>
+                <li><a href="#github"><i class="fab fa-github"></i></a></li>
+                <li><a href="#instagram"><i class="fab fa-instagram"></i></a></li>
+            </ul>
+        </div>
+    </section>
+    
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
 </html>
