change the logo

--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,7 @@
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class=" container-fluid">
                     <!-- logo and brand -->
-                    <a class="navbar-brand" href="#"> <img class="logo" src="imgs/logo.jpg" alt=""><i>Portfolio Site</i></a>
+                    <a class="navbar-brand" href="#"> <img class="logo" src="imgs/logo.png" alt=""><i>Portfolio Site</i></a>
                     <!-- responsive button -->
                     <button class=" navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
