--- a/Index.html
+++ b/Index.html
@@ -45,13 +45,18 @@
                 </div>
             </nav>
         </section>
+        <!-- content -->
         <section class="introduction container" id="home">
-            <h1>Dimuthu Lakshan</h1>
-            <h2>I am a Web Developer</h2>
+            <div class="content">
+                <h1>Dimuthu Lakshan</h1>
+                <h3>I am a Web Developer</h3>
+            </div>
         </section>
+        <!-- Footer -->
         <section class="footer container-fluid">
             <!-- languages -->
-            <div>
+            <div class="languages">
+                <p>Language</p>
                 <ul>
                     <li><a href="#eng">ENG</a></li>
                     <li><a href="#sinhal">SIN</a></li>
@@ -59,13 +64,13 @@
             </div>
 
             <!-- social media -->
-            <div>
-                <ul>
-                    <li><a href="#twitter"><i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#facebook"><i class="fab fa-facebook-square"></i></a></li>
-                    <li><a href="#linkedin"><i class="fab fa-linkedin"></i></a></li>
-                    <li><a href="#github"><i class="fab fa-github"></i></a></li>
-                    <li><a href="#instagram"><i class="fab fa-instagram"></i></a></li>
+            <div class="Social_Media">
+                <ul >
+                    <li><a class="btn btn-link " href="#twitter"><i class="fab fa-twitter fa-2x"></i> <span class="item"></span> </a></li>
+                    <li><a class="btn btn-link " href="#facebook"><i class="fab fa-facebook-square fa-2x"></i></a></li>
+                    <li><a class="btn btn-link " href="#linkedin"><i class="fab fa-linkedin fa-2x"></i></a></li>
+                    <li><a class="btn btn-link " href="#github"><i class="fab fa-github fa-2x"></i></a></li>
+                    <li><a class="btn btn-link " href="#instagram"><i class="fab fa-instagram fa-2x"></i></a></li>
                 </ul>
             </div>
         </section>
