--- a/Index.html
+++ b/Index.html
@@ -26,7 +26,7 @@
                     <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo01">
                         <ul class="navbar-nav justify-content-end">
                         <li class="nav-item">
-                            <a class="nav-link " href="#about">About</a>
+                            <a class="nav-link " href="pages/about.html">About</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#resume">Resume</a>
@@ -56,23 +56,25 @@
         <section class="last container-fluid">
             <!-- languages -->
             <div class="footer">
-                <div class="languages">
-                    <p>Language</p>
-                    <ul>
-                        <li><a href="#eng">ENG</a></li>
-                        <li><a href="#sinhal">SIN</a></li>
-                    </ul>
-                </div>
+                <div class="row"></div>
+                    <div class="col-6 languages">
+                        <p>Language</p>
+                        <ul>
+                            <li><a href="#eng">ENG</a></li>
+                            <li><a href="#sinhal">SIN</a></li>
+                        </ul>
+                    </div>
 
-                <!-- social media -->
-                <div class="Social_Media">
-                    <ul >
-                        <li><a class="btn btn-link " href="#twitter"><i class="fab fa-twitter fa-2x"></i> <span class="item"></span> </a></li>
-                        <li><a class="btn btn-link " href="#facebook"><i class="fab fa-facebook-square fa-2x"></i></a></li>
-                        <li><a class="btn btn-link " href="#linkedin"><i class="fab fa-linkedin fa-2x"></i></a></li>
-                        <li><a class="btn btn-link " href="#github"><i class="fab fa-github fa-2x"></i></a></li>
-                        <li><a class="btn btn-link " href="#instagram"><i class="fab fa-instagram fa-2x"></i></a></li>
-                    </ul>
+                    <!-- social media -->
+                    <div class="col-6 Social_Media">
+                        <ul >
+                            <li><a class="btn btn-link " href="#twitter"><i class="fab fa-twitter fa-2x"></i> <span class="item"></span> </a></li>
+                            <li><a class="btn btn-link " href="#facebook"><i class="fab fa-facebook-square fa-2x"></i></a></li>
+                            <li><a class="btn btn-link " href="#linkedin"><i class="fab fa-linkedin fa-2x"></i></a></li>
+                            <li><a class="btn btn-link " href="#github"><i class="fab fa-github fa-2x"></i></a></li>
+                            <li><a class="btn btn-link " href="#instagram"><i class="fab fa-instagram fa-2x"></i></a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </section>
