--- a/Index.html
+++ b/Index.html
@@ -26,7 +26,7 @@
                     <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo01">
                         <ul class="navbar-nav justify-content-end">
                         <li class="nav-item">
-                            <a class="nav-link " href="pages/about.html">About</a>
+                            <a class="nav-link " href="#about">About</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#resume">Resume</a>
@@ -48,10 +48,138 @@
         <!-- content -->
         <section class="introduction container" id="home">
             <div class="content">
-                <h1>Dimuthu Lakshan</h1>
+                <h1>Ema Wotson</h1>
                 <h3>I am a Web Developer</h3>
             </div>
         </section>
+        <!-- About Section -->
+        <Section class="info-sec" id="about">
+            <!-- who am i -->
+            <div class="row container">
+                <div class="col-6 image-wrapper">
+                    <!-- image -->
+                    <img class="info-img " src="./imgs/info-img.jpg" alt="info-img">
+                </div>
+                <div class="col-6 content-wrapper">
+                    <div class="description">
+                        <!-- Description -->
+                        <h2>Who am I</h2>
+                        <h6>I'm Emma Smith, a visual UX/UI Designer and Web Developer</h6>
+                        <div class="description">
+                            <p>I am a freelancer based in the United Kingdom and i have been building noteworthy UX/UI designs and websites for years, which comply with the latest design trends. I help convert a vision and an idea into meaningful and useful products. Having a sharp eye for product evolution helps me prioritize tasks, iterate fast and deliver faster.</p>
+                        </div>
+                    </div>
+                    <div>
+                        <!-- information  -->
+                        <div class="info" >
+                            <div class="row">
+                                <div class="col-6">
+                                    <span>Name :</span> <p>Emma Smith</p>
+                                </div>
+                                <div class="col-6">
+                                    <span>Email :</span> <p>Emma@gmail.com</p>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-6">
+                                    <span>Age :</span> <p>21</p>
+                                </div>
+                                <div class="col-6">
+                                    <span>From :</span> <p>liverpool</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div>
+                            <button type="button" class="btn btn-success"> <a href="#download CV"> Dowload CV</a></button>
+                        </div>
+                    </div>
+                </div>
+                <!-- Service Grid -->
+                <h2>My services</h2>
+                <div class="container services">
+                    <div class="service-grid">
+                        <div class="grid-item">
+                            <i class="fab fa-css3-alt fa-3x"></i>
+                            <h6>Design trends</h6>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat recusandae ipsam consequatur animi earum est.</p>
+                        </div>
+                        <div class="grid-item">
+                            <i class="far fa-images fa-3x"></i>
+                            <h6>PSD Design</h6>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat recusandae ipsam consequatur animi earum est.</p>
+                        </div>
+                        <div class="grid-item">
+                            <i class="far fa-question-circle fa-3x"></i>
+                            <h6>Customer support</h6>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat recusandae ipsam consequatur animi earum est.</p>
+                        </div>
+                        <div class="grid-item">
+                            <i class="fab fa-wordpress fa-3x"></i>
+                            <h6>Web Development</h6>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat recusandae ipsam consequatur animi earum est.</p>
+                        </div>
+                        <div class="grid-item">
+                            <i class="fas fa-expand-arrows-alt fa-3x"></i>
+                            <h6>Fully responsive</h6>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat recusandae ipsam consequatur animi earum est.</p>
+                        </div>
+                        <div class="grid-item">
+                            <i class="fas fa-rocket fa-3x"></i>
+                            <h6>Branding</h6>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat recusandae ipsam consequatur animi earum est.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- plans grid -->
+                <h2>Choose the best plan you need</h2>
+                <div class="plan-grid" >
+                    <div class="plan-item">
+                        <i class="fas fa-egg fa-3x"></i>
+                        <h3>Standard</h3>
+                        <ul>
+                            <li>Mobile app design</li>
+                            <li>Responsive Design</li>
+                            <li>Database Design</li>
+                            <li>Web design</li>
+                            <li>24/7 support</li>
+                        </ul>
+                        <button class="btn btn-success">Get Standard</button>
+                    </div>
+                    <div class="plan-item">
+                        <i class="fas fa-user-tie fa-3x"></i>
+                        <h3>Professional</h3>
+                        <ul>
+                            <li>Mobile app design</li>
+                            <li>Responsive Design</li>
+                            <li>Database Design</li>
+                            <li>Web design</li>
+                            <li>24/7 support</li>
+                        </ul>
+                        <button class="btn btn-success">Get Professional</button>
+                    </div>
+                    <div class="plan-item">
+                        <i class="fas fa-briefcase fa-3x"></i>
+                        <h3>Business</h3>
+                        <ul>
+                            <li>Mobile app design</li>
+                            <li>Responsive Design</li>
+                            <li>Database Design</li>
+                            <li>Web design</li>
+                            <li>24/7 support</li>
+                        </ul>
+                        <button class="btn btn-success">Get Business</button>
+                    </div>
+                </div>
+            </div>
+            <div class="home">
+                <a href="#"><i class="fas fa-home fa-lg"></i></a>
+            </div>
+        </Section>
+
+        <!-- Resume Section -->
+        <Section>
+            
+        </Section>
         <!-- Footer -->
         <section class="last container-fluid">
             <!-- languages -->
@@ -68,11 +196,11 @@
                     <!-- social media -->
                     <div class="col-6 Social_Media">
                         <ul >
-                            <li><a class="btn btn-link " href="#twitter"><i class="fab fa-twitter fa-2x"></i> <span class="item"></span> </a></li>
-                            <li><a class="btn btn-link " href="#facebook"><i class="fab fa-facebook-square fa-2x"></i></a></li>
-                            <li><a class="btn btn-link " href="#linkedin"><i class="fab fa-linkedin fa-2x"></i></a></li>
-                            <li><a class="btn btn-link " href="#github"><i class="fab fa-github fa-2x"></i></a></li>
-                            <li><a class="btn btn-link " href="#instagram"><i class="fab fa-instagram fa-2x"></i></a></li>
+                            <li><a class="btn btn-link " href="#twitter"><i class="fab fa-twitter fa-lg"></i> <span class="item"></span> </a></li>
+                            <li><a class="btn btn-link " href="#facebook"><i class="fab fa-facebook-square fa-lg"></i></a></li>
+                            <li><a class="btn btn-link " href="#linkedin"><i class="fab fa-linkedin fa-lg"></i></a></li>
+                            <li><a class="btn btn-link " href="#github"><i class="fab fa-github fa-lg"></i></a></li>
+                            <li><a class="btn btn-link " href="#instagram"><i class="fab fa-instagram fa-lg"></i></a></li>
                         </ul>
                     </div>
                 </div>
