add resume section

--- a/Index.html
+++ b/Index.html
@@ -56,6 +56,9 @@
         <Section class="info-sec" id="about">
             <!-- who am i -->
             <div class="row container">
+                <div class="home">
+                    <a href="#"><i class="fas fa-home fa-lg"></i></a>
+                </div>
                 <div class="col-6 image-wrapper">
                     <!-- image -->
                     <img class="info-img " src="./imgs/info-img.jpg" alt="info-img">
@@ -171,15 +174,115 @@
                     </div>
                 </div>
             </div>
-            <div class="home">
-                <a href="#"><i class="fas fa-home fa-lg"></i></a>
-            </div>
         </Section>
 
         <!-- Resume Section -->
-        <Section>
-            
+        <Section class="resume" id="resume">
+            <div class="home">
+                <a href="#"><i class="fas fa-home fa-lg"></i></a>
+            </div>
+            <div class="row">
+                <div class="col-6 education">
+                    <h2>Education</h2>
+                    <div class="degree">
+                        <h4>Computer Science</h4>
+                        <h6>cambridge University</h6>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui accusantium ratione dolore.</p>
+                    </div>
+                    <div class="degree">
+                        <h4>Bachelor Degree</h4>
+                        <h6>cambridge University</h6>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui accusantium ratione dolore.</p>
+                    </div>
+                    <div class="degree">
+                        <h4>Master Degree</h4>
+                        <h6>cambridge University</h6>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui accusantium ratione dolore.</p>
+                    </div>
+                </div>
+                <div class="col-6 education">
+                    <h2>experience</h2>
+                    <div class="experience">
+                        <h4>Software Engineer</h4>
+                        <h6>Google 2017/18</h6>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui accusantium ratione dolore.</p>
+                    </div>
+                    <div class="experience">
+                        <h4>Software Engineer</h4>
+                        <h6>Google 2017/18</h6>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui accusantium ratione dolore.</p>
+                    </div>
+                    <div class="experience">
+                        <h4>Software Engineer</h4>
+                        <h6>Google 2017/18</h6>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui accusantium ratione dolore.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="skill row">
+                <h2>Skills that I have</h2>
+
+                <div class="col-6">
+                    <div class="skillset">
+                        <div class="skill-info">
+                            <h6>HTML/CSS</h6>
+                            <h6>95%</h6>
+                        </div>
+                        <progress id="file" value="95" max="100"> 95% </progress>
+                    </div>
+                    <div class="skillset">
+                        <div class="skill-info">
+                            <h6>Web Designing</h6>
+                            <h6>80%</h6>
+                        </div>
+                        <progress id="file" value="80" max="100"> 80% </progress>
+                    </div>
+                    <div class="skillset">
+                        <div class="skill-info">
+                            <h6>Javascript</h6>
+                            <h6>90%</h6>
+                        </div>
+                        <progress id="file" value="90" max="100"> 90% </progress>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="skillset">
+                        <div class="skill-info">
+                            <h6>React JS</h6>
+                            <h6>90%</h6>
+                        </div>
+                        <progress id="file" value="90" max="100"> 90% </progress>
+                    </div>
+                    <div class="skillset">
+                        <div class="skill-info">
+                            <h6>Express js</h6>
+                            <h6>95%</h6>
+                        </div>
+                        <progress id="file" value="95" max="100"> 95% </progress>
+                    </div>
+                    <div class="skillset">
+                        <div class="skill-info">
+                            <h6>TypeScript</h6>
+                            <h6>80%</h6>
+                        </div>
+                        <progress id="file" value="80" max="100"> 80% </progress>
+                    </div>
+                </div>
+                
+            </div>
         </Section>
+
+        <!-- Portfolio Section-->
+        <section class="portfolio" id="portfolio">
+            <div class="image-gallery">
+                <img src="./imgs/item-1.jpg" alt="item1">
+                <img src="./imgs/item-2.jpg" alt="item2">
+                <img src="./imgs/item-3.jpg" alt="item3">
+                <img src="./imgs/item-4.jpg" alt="item4">
+                <img src="./imgs/item-5.jpg" alt="item5">
+                <img src="./imgs/item-6.jpg" alt="item6">
+            </div>
+        </section>
         <!-- Footer -->
         <section class="last container-fluid">
             <!-- languages -->
