--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,10 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="index.css">
     <script src="https://kit.fontawesome.com/d550f06ca5.js" crossorigin="anonymous"></script>
-    <title>Portfolio</title>
+    <link rel="icon"  href="./imgs/logo.png">
+    <title>
+        The Web Developer
+    </title>
 </head>
 <body>
     <main class="vertical_boxes">
@@ -17,7 +20,7 @@
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class=" container-fluid">
                     <!-- logo and brand -->
-                    <a class="navbar-brand" href="#"> <img class="logo" src="imgs/logo.png" alt=""><i>DL's Home</i></a>
+                    <a class="navbar-brand" href="#"> <img class="logo" src="imgs/logo.png" alt=""><i>Developer's Home</i></a>
                     <!-- responsive button -->
                     <button class=" navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -428,7 +431,6 @@
                             <li><a href="#sinhal">SIN</a></li>
                         </ul>
                     </div>
-
                     <!-- social media -->
                     <div class="col-6 Social_Media">
                         <ul >
